--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ theme: jekyll-theme-startbootstrap-agency
 plugins:
   - jekyll-feed
 
+assets_path: ''
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
